fixed incorrect hrefs when accessing from heroku

--- a/server/public/views/craneinspectionform.hbs
+++ b/server/public/views/craneinspectionform.hbs
@@ -9,7 +9,7 @@
 	{{thanks}}
 
 	<div style="padding: 0px 0px 0px 20px">
-	<a href="http://localhost:3000/dashboard">Dashboard</a><br><br>
+	<a href="dashboard">Dashboard</a><br><br>
 	</div>
 
 	<form action="/craneinspection" method="POST" align="center">
