--- a/server/public/views/craneinspections.hbs
+++ b/server/public/views/craneinspections.hbs
@@ -5,7 +5,7 @@
 
 <body>
 	<div style="padding: 0px 0px 0px 20px">
-	<a href="http://localhost:3000/dashboard">Dashboard</a><br><br>
+	<a href="dashboard">Dashboard</a><br><br>
 	</div>
 	<table style="width: 100%;border: 1px solid black">
 		<tr>
