--- a/server/public/views/dashboard.hbs
+++ b/server/public/views/dashboard.hbs
@@ -6,11 +6,11 @@
 <body style="text-align: center" >
 	
 	<div style="padding: 20px 20px 20px 20px">
-	<a href="http://localhost:3000/craneinspection">Crane inspection</a>
+	<a href="craneinspection">Crane inspection</a>
 	</div>
 
 	<div style="padding: 20px 20px 20px 20px">
-	<a href="http://localhost:3000/craneinspections">All inspections
+	<a href="craneinspections">All inspections
 	</a>
 	</div>
 
