--- a/server/public/views/dashboard.hbs
+++ b/server/public/views/dashboard.hbs
@@ -1,19 +1,28 @@
-<html>
-<h1 align="center">Dashboard</h1>
+<!doctype html>
+<html lang="en">
+
+{{> head}}
 
 {{> bootstrap}}
 
-<body style="text-align: center" >
-	
-	<div style="padding: 20px 20px 20px 20px">
-	<a href="craneinspection">Crane inspection</a>
+<body>
+
+<!-- Page Title-->
+<div class="container">
+	<h1 align="center">Dashboard</h1>
+</div>
+
+	<div align="center">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					<a href="craneinspection">Perform Crane inspection</a>
+				</div>
+				<div class="col-sm">
+					<a href="craneinspections">View all Crane inspections</a>
+				</div>
+			</div>
+		</div>
 	</div>
-
-	<div style="padding: 20px 20px 20px 20px">
-	<a href="craneinspections">All inspections
-	</a>
-	</div>
-
-
 </body>
 </html>
