--- a/server/public/views/atcodashboard.hbs
+++ b/server/public/views/atcodashboard.hbs
@@ -6,13 +6,38 @@
 {{> bootstrap}}
 
 <body>
+		<div id="piechart" align="center"></div>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+		<script type="text/javascript">
+		// Load google charts
+		google.charts.load('current', {'packages':['corechart']});
+		google.charts.setOnLoadCallback(drawChart);
+
+		// Draw the chart and set the chart values
+		function drawChart() {
+		  var data = google.visualization.arrayToDataTable([
+		  ['Inspections', 'Inspections performed'],
+		  ['Completed', {{completed}}],
+		  ['Not Completed', {{notCompleted}}]
+		]);
+
+		  // Optional; add a title and set the width and height of the chart
+		  var options = {'title':'Inspections', 'width':550, 'height':400};
+
+		  // Display the chart inside the <div> element with id="piechart"
+		  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+		  chart.draw(data, options);
+		}
+		</script>
 
 <!-- Page Title-->
 <div class="container">
-	<h1 align="center">Crane Inspection Dashboard</h1>
+	<h1 align="center">Inspection Dashboard</h1>
 </div>
 
-<table style="width: 100%;border: 1px solid black">
+<div style="margin: 20px;">
+<table style="width: 100%;border: 1px solid black;">
 	<tr>
 		<th style="border: 1px solid black;text-align: center">ID</th>
 		<th style="border: 1px solid black;text-align: center">Inspected?</th>
@@ -26,6 +51,7 @@
 	{{/each}}
 
 </table>
+<div>
 
 </body>
 </html>
