--- a/server/public/views/dashboard.hbs
+++ b/server/public/views/dashboard.hbs
@@ -9,20 +9,18 @@
 
 <!-- Page Title-->
 <div class="container">
-	<h1 align="center">Dashboard</h1>
+	<h1 align="center">Safety App</h1>
 </div>
 
-	<div align="center">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<a href="craneinspection">Perform Crane inspection</a>
-				</div>
-				<div class="col-sm">
-					<a href="craneinspections">View all Crane inspections</a>
-				</div>
+<div align="center">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<a href="atcoinspections"><button>Inspections</button></a>
+			</div>
+			<div class="col-sm">
+				<!-- <a href="atcoprojects"><button>Test Project Dashboard</button></a> -->
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+</div>
