added live tracking of monthly leadining indicators

--- a/server/public/views/dashboard.hbs
+++ b/server/public/views/dashboard.hbs
@@ -21,6 +21,9 @@
 			<div class="col-sm">
 				<!-- <a href="atcoprojects"><button>Test Project Dashboard</button></a> -->
 			</div>
+			<div class="col-sm">
+				<a href="atcoinspections/leadingindicators"><button>Leading Indicators (This Month)</button></a>
+			</div>
 		</div>
 	</div>
 </div>
