--- a/server/public/views/atcodashboard.hbs
+++ b/server/public/views/atcodashboard.hbs
@@ -9,34 +9,6 @@
 
 		<script src="/socket.io/socket.io.js"></script>
 
-		<!-- <div id="piechart" align="center"></div>
-		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-		<script type="text/javascript">
-		// Load google charts
-		google.charts.load('current', {'packages':['corechart']});
-		google.charts.setOnLoadCallback(drawChart);
-
-		// Draw the chart and set the chart values
-		function drawChart() {
-		  var data = google.visualization.arrayToDataTable([
-		  ['Inspections', 'Inspections performed'],
-		  ['Completed', {{completed}}],
-		  ['Not Completed', {{notCompleted}}]
-		]);
-
-		  // Optional; add a title and set the width and height of the chart
-		  var options = {'title':'Inspections',
-		  				 'width':550,
-		  				 'height':400,
-		  				 'colors':['#43ea1e', '#f91d1d']};
-
-		  // Display the chart inside the <div> element with id="piechart"
-		  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-		  chart.draw(data, options);
-		}
-		</script> -->
-
 <!-- Page Title-->
 <div class="container">
 	<h1 align="center">Daily Dashboard</h1>
@@ -70,6 +42,7 @@
 			socket.on('newInspection', function (inspection) {
 				console.log('new Inspection Recieved!', inspection.id);
 
+				console.log(inspection.id);
 				var queryId = inspection.id;
 				var queryIdEscaped = queryId.replace("&", "\\&").replace("/", "\\/")
 
