Fixed project dashboard render

--- a/server/public/views/dashboard.hbs
+++ b/server/public/views/dashboard.hbs
@@ -19,7 +19,7 @@
 				<a href="atcoinspections"><button>Inspections</button></a>
 			</div>
 			<div class="col-sm">
-				<!-- <a href="atcoprojects"><button>Test Project Dashboard</button></a> -->
+				<a href="atcoprojects"><button>Test Project Dashboard</button></a>
 			</div>
 			<div class="col-sm">
 				<a href="atcoinspections/leadingindicators"><button>Leading Indicators (This Month)</button></a>
